# HomeSphere

./: CMakeLists.txt  README.md  run.sh
data/: emergency_test.json  environment.json  input.txt  sence1.json  sence2.json  sence3.json  test.json
include/: SmartLogger.h  airConditioner.h  common.h  device.h  deviceParam.h  event.h  exception.h  light.h  room.h  sceneSimulation.h  sensor.h  user.h
src/: SmartLogger.cpp  airConditioner.cpp  device.cpp  light.cpp  main.cpp  room.cpp  sceneSimulation.cpp  sensor.cpp  user.cpp
